--- a/.github/scripts/package.json
+++ b/.github/scripts/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "lt-action",
+  "name": "my-github-action",
   "version": "1.0.0",
-  "description": "",
+  "description": "A GitHub Action built with JavaScript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GeekTrainer/lt-action.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GeekTrainer/lt-action/issues"
+  },
+  "homepage": "https://github.com/GeekTrainer/lt-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.1",
+    "@actions/core": "^1.6.0",
     "@actions/github": "^6.0.0"
   }
 }
